# RTR2HEM

./: .gitignore  Pipfile  README.md  build.py  config.json  config.txt  developer.md  main.py  manifest.xml  pyproject.toml  readme.md  requirements.txt  run_rtr2hem.bat  run_rtr2hem.ps1  static_tables.xlsx
.github/workflows/: backsync_icf.yaml  mirror_rtr2hem.yaml
GUI/: generic_GUI.py
modules/: __init__.py  accdb_manager.py  handle_accdb.py  html_writer.py  initial_processing.py  multipathway_processing.py  qa.py  run.py  source_ids.py  utils.py  write_outputs.py
modules/GUI/: __init__.py  column_map.py  epg_popup.py  generic_GUI.py  regCodes_popup.py  settings.py  spinner.py  status.py
modules/mp_queries/: latitudes_longitudes.py  shared_queries.py
modules/outputs_writer/: __init__.py  emiss_loc.py  emissions_loc.py  fac_address.py  fac_list.py  hap_emissions.py  write_accdb.py
modules/queries/: latitudes_longitudes.py  shared_queries.py
src/: __init__.py  accdb_manager.py  html_writer.py  run.py  utils.py
src/GUI/: __init__.py  column_map.py  epg_popup.py  generic_GUI.py  regCodes_popup.py  settings.py  status.py
static/: static_ERPTs.xlsx  static_MP_EcoEquivalencyFactors.xlsx  static_MP_EcoScreeningThresholds.xlsx  static_MP_HHScreeningThresholds.xlsx  static_MP_ListOfEcoHAPs.xlsx  static_MP_PBHAPChems_withHHEquivalencyFactors.xlsx  static_PollutantCrosswalk_andMetalSpeciations.xlsx
templates/: HEM4_Emiss_Loc_ICF.xlsx  HEM4_Fac_Address_ICF.xlsx  HEM4_Facility_List_Options_ICF.xlsx  HEM4_HAP_Emiss_ICF.xlsx  Tier1_QA_Details.xlsx
(+93 files in other folders)
