[project]
name = "RTR2HEM"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "brotli==1.1.0",
    "cffi==1.16.0",
    "contourpy==1.1.1",
    "cssselect2==0.7.0",
    "cycler==0.12.1",
    "et-xmlfile==1.1.0",
    "fonttools==4.44.0",
    "greenlet==3.0.1",
    "html5lib==1.1",
    "importlib-metadata==6.8.0",
    "importlib-resources==6.1.0",
    "kiwisolver==1.4.5",
    "msaccessdb==1.0.0",
    "numpy==1.26.1",
    "openpyxl==3.1.2",
    "packaging==23.2",
    "pandas==2.1.2",
    "pefile==2023.2.7",
    "pillow==10.1.0",
    "pycparser==2.21",
    "pydyf==0.8.0",
    "pyinstaller==6.20.0",
    "pyinstaller-hooks-contrib==2026.5",
    "pyparsing==3.1.1",
    "pyphen==0.14.0",
    "pypyodbc==1.3.6",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "pywin32-ctypes==0.2.2",
    "setuptools==82.0.1",
    "six==1.16.0",
    "sqlalchemy==2.0.23",
    "tinycss2==1.2.1",
    "typing-extensions==4.8.0",
    "tzdata==2023.3",
    "webencodings==0.5.1",
    "xlsxwriter==3.1.9",
    "zipp==3.17.0",
    "zopfli==0.2.3",
]
